# censusalign

./: .gitignore  LICENSE  README.md  pyproject.toml
censusalign/: __init__.py  blockify.py  cultivate.py  fetch.py  graphify.py  harvest.py
censusalign/config/: ca_2022.yaml  swdb.yaml
docs/: sources.md
