[project]
name = "censusalign"
version = "0.1.0"
description = "A python toolkit for aligning census data with electoral results"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.0.1",
    "gerrychain>=0.3.2",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "openpyxl>=3.1.5",
]
